--- a/Deutsch/Makefile
+++ b/Deutsch/Makefile
@@ -1,3 +1,8 @@
-*.pdf: *.md
-	pandoc -f markdown -t pdf -s $< -o pdf/$< --latex-engine=xelatex --variable mainfont="DejaVu Sans"
+%.pdf: %.md
+	pandoc --latex-engine xelatex \
+		-V mainfont='DejaVu Sans' \
+		-V fontsize='11pt' \
+		-o $@ \
+		$<
 
+all: $(addsuffix .pdf, $(basename $(wildcard *.md))) 
